update paths + email link

--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
         <meta name="og:site_name" content="TJCTF 2016" />
         <meta name="og:description" content="A Capture the Flag Cybersecurity competition run by the TJHSST Computer Security Club." />
         <!-- Favicon -->
-        <link rel="apple-touch-icon" sizes="57x57" href="http://127.0.0.1:9020/static/favicon/apple-icon-57x57.png" />
-        <link rel="apple-touch-icon" sizes="60x60" href="http://127.0.0.1:9020/static/favicon/apple-icon-60x60.png" />
-        <link rel="apple-touch-icon" sizes="72x72" href="http://127.0.0.1:9020/static/favicon/apple-icon-72x72.png" />
-        <link rel="apple-touch-icon" sizes="76x76" href="http://127.0.0.1:9020/static/favicon/apple-icon-76x76.png" />
-        <link rel="apple-touch-icon" sizes="114x114" href="http://127.0.0.1:9020/static/favicon/apple-icon-114x114.png" />
-        <link rel="apple-touch-icon" sizes="120x120" href="http://127.0.0.1:9020/static/favicon/apple-icon-120x120.png" />
-        <link rel="apple-touch-icon" sizes="144x144" href="http://127.0.0.1:9020/static/favicon/apple-icon-144x144.png" />
-        <link rel="apple-touch-icon" sizes="152x152" href="http://127.0.0.1:9020/static/favicon/apple-icon-152x152.png" />
-        <link rel="apple-touch-icon" sizes="180x180" href="http://127.0.0.1:9020/static/favicon/apple-icon-180x180.png" />
+        <link rel="apple-touch-icon" sizes="57x57" href="static/favicon/apple-icon-57x57.png" />
+        <link rel="apple-touch-icon" sizes="60x60" href="static/favicon/apple-icon-60x60.png" />
+        <link rel="apple-touch-icon" sizes="72x72" href="static/favicon/apple-icon-72x72.png" />
+        <link rel="apple-touch-icon" sizes="76x76" href="static/favicon/apple-icon-76x76.png" />
+        <link rel="apple-touch-icon" sizes="114x114" href="static/favicon/apple-icon-114x114.png" />
+        <link rel="apple-touch-icon" sizes="120x120" href="static/favicon/apple-icon-120x120.png" />
+        <link rel="apple-touch-icon" sizes="144x144" href="static/favicon/apple-icon-144x144.png" />
+        <link rel="apple-touch-icon" sizes="152x152" href="static/favicon/apple-icon-152x152.png" />
+        <link rel="apple-touch-icon" sizes="180x180" href="static/favicon/apple-icon-180x180.png" />
         <meta name="google–site–verification" content="TvxVkAmZCB5v4w5o5drVXOMok9xzoMeIowoIpifyln" />
-        <link rel="icon" type="image/png" sizes="192x192" href="http://127.0.0.1:9020/static/favicon/android-icon-192x192.png" />
+        <link rel="icon" type="image/png" sizes="192x192" href="static/favicon/android-icon-192x192.png" />
         <link rel="icon" type="image/png" sizes="32x32" href="static/favicon/favicon-32x32.png" />
-        <link rel="icon" type="image/png" sizes="96x96" href="http://127.0.0.1:9020/static/favicon/favicon-96x96.png" />
-        <link rel="icon" type="image/png" sizes="16x16" href="http://127.0.0.1:9020/static/favicon/favicon-16x16.png" />
+        <link rel="icon" type="image/png" sizes="96x96" href="static/favicon/favicon-96x96.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="static/favicon/favicon-16x16.png" />
         <link rel="shortcut icon" type="image/png" href="static/favicon/favicon-32x32.png" />
-        <link rel="manifest" href="http://127.0.0.1:9020/static/favicon/manifest.json" />
+        <link rel="manifest" href="static/favicon/manifest.json" />
         <meta name="msapplication-TileColor" content="#ffffff" />
         <meta name="msapplication-TileImage" content="/static/favicon/ms-icon-144x144.png" />
         <meta name="theme-color" content="#ffffff" />
@@ -64,8 +64,7 @@
                 <li><a href="index.html#prep">Prep</a></li>
                 <li><a href="index.html#prizes">Prizes</a></li>
                 <li><a href="index.html#sponsors">Sponsors</a></li>
-                <li><a href="http://compete.tjctf.org/chat/">Chat</a></li>
-                <li><a href="http://compete.tjctf.org/login/">Login</a></li>
+                <li><a href="mailto:ctf@tjhsst.edu">Contact Us</a></li>
             </ul>
             <ul id="nav-mobile" class="side-nav">
                 <li><a href="index.html#about">About</a></li>
@@ -73,8 +72,7 @@
                 <li><a href="index.html#prep">Prep</a></li>
                 <li><a href="index.html#prizes">Prizes</a></li>
                 <li><a href="index.html#sponsors">Sponsors</a></li>
-                <li><a href="http://compete.tjctf.org/chat/">Chat</a></li>
-                <li><a href="http://compete.tjctf.org/login/">Login</a></li>
+                <li><a href="mailto:ctf@tjhsst.edu">Contact Us</a></li>
             </ul>
             <a href="index.html#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons white-text">menu</i></a>
         </div>
@@ -128,7 +126,7 @@
             <div class="icon-block">
                 <h2 class="center black-text"><i class="material-icons light-blue-text">people</i></h2>
                 <h5 class="center grey-text text-darken-4">How do I register?</h5>
-                <p class="light grey-text text-darken-2"><strong>Registration is now closed. To create a team, please email ctf@tjhsst.edu. Note: Response to team creation requests may take some time. </strong>TJCTF is open to all eligible High School students (tl;dr Americans, but if you have questions read the rules). You can compete in teams consisting of up to 5 members. Teams who do not fit these criteria may play, but are not eligible for prizes.</p>
+                <p class="light grey-text text-darken-2"><strong>The competition is now over.</strong>TJCTF is open to all eligible High School students (tl;dr Americans, but if you have questions read the rules). You can compete in teams consisting of up to 5 members. Teams who do not fit these criteria may play, but are not eligible for prizes.</p>
             </div>
         </div>
         <div class="col s12 m3">
