--- a/index.html
+++ b/index.html
@@ -55,26 +55,26 @@
         <header>
         <nav class="light-blue" role="navigation">
         <div class="nav-wrapper container">
-            <a id="logo-container" href="index.html#top" class="brand-logo">
+            <a id="logo-container" href="#top" class="brand-logo">
                 <img src="static/logo-thin-white-header.png" id="logo" alt="TJCTF" title="TJCTF" />
             </a>
             <ul class="right light-blue hide-on-med-and-down">
-                <li><a href="index.html#about">About</a></li>
-                <li><a href="index.html#rules">Rules</a></li>
-                <li><a href="index.html#prep">Prep</a></li>
-                <li><a href="index.html#prizes">Prizes</a></li>
-                <li><a href="index.html#sponsors">Sponsors</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#rules">Rules</a></li>
+                <li><a href="#prep">Prep</a></li>
+                <li><a href="#prizes">Prizes</a></li>
+                <li><a href="#sponsors">Sponsors</a></li>
                 <li><a href="mailto:ctf@tjhsst.edu">Contact Us</a></li>
             </ul>
             <ul id="nav-mobile" class="side-nav">
-                <li><a href="index.html#about">About</a></li>
-                <li><a href="index.html#rules">Rules</a></li>
-                <li><a href="index.html#prep">Prep</a></li>
-                <li><a href="index.html#prizes">Prizes</a></li>
-                <li><a href="index.html#sponsors">Sponsors</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#rules">Rules</a></li>
+                <li><a href="#prep">Prep</a></li>
+                <li><a href="#prizes">Prizes</a></li>
+                <li><a href="#sponsors">Sponsors</a></li>
                 <li><a href="mailto:ctf@tjhsst.edu">Contact Us</a></li>
             </ul>
-            <a href="index.html#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons white-text">menu</i></a>
+            <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons white-text">menu</i></a>
         </div>
         </nav>
         <div id="index-banner" class="parallax-container">
@@ -119,7 +119,7 @@
                 <h2 class="center black-text"><i class="material-icons light-blue-text">description</i></h2>
                 <h5 class="center grey-text text-darken-4">What is TJCTF?</h5>
                 <p class="light grey-text text-darken-2">TJCTF is an online cybersecurity competition designed for high school students. Challenges will span various difficulty levels, so there will be problems for students who are new to computer science as well as those who are computer security experts.</p>
-                <p class="light light-blue-text"><a href="index.html#about">About &rarr;</a></p>
+                <p class="light light-blue-text"><a href="#about">About &rarr;</a></p>
             </div>
         </div>
         <div class="col s12 m3">
@@ -134,7 +134,7 @@
                 <h2 class="center black-text"><i class="material-icons light-blue-text">assignment_turned_in</i></h2>
                 <h5 class="center grey-text text-darken-4">How does it work?</h5>
                 <p class="light grey-text text-darken-2">Simple. Your team is given 3 days to solve as many challenges as possible, by finding a string called the "flag" after solving a puzzle. You'll know when you've found it. Each flag you find earns you points.</p>
-                <p class="light light-blue-text"><a href="index.html#rules">Competition Rules &rarr;</a></p>
+                <p class="light light-blue-text"><a href="#rules">Competition Rules &rarr;</a></p>
             </div>
         </div>
         <div class="col s12 m3">
@@ -142,7 +142,7 @@
                 <h2 class="center black-text"><i class="material-icons light-blue-text">code</i></h2>
                 <h5 class="center grey-text text-darken-4">How do I prepare?</h5>
                 <p class="light grey-text text-darken-2">TJCTF has challenges for computer science students with all levels of experience, so preparation shouldn't be necessary. If you'd like to brush up on computer security to give your team an edge, we've compiled some helpful materials.</p>
-                <p class="light light-blue-text"><a href="index.html#prep">Preparation Materials &rarr;</a></p>
+                <p class="light light-blue-text"><a href="#prep">Preparation Materials &rarr;</a></p>
             </div>
         </div>
     </div>
@@ -330,7 +330,7 @@
         <footer class="page-footer light-blue">
         <div class="footer-copyright">
             <div class="container">
-                &copy; 2016 <a href="index.html" class="white-text">TJCTF</a>
+                &copy; 2016 <a href="#top" class="white-text">TJCTF</a>
             </div>
         </div>
         </footer>
